--- a/viewers/restfulobjects/client/pom.xml
+++ b/viewers/restfulobjects/client/pom.xml
@@ -21,25 +21,40 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.apache.isis.core</groupId>
-        <artifactId>isis-core</artifactId>
+        <groupId>org.apache.isis.viewer</groupId>
+        <artifactId>isis-viewer-restfulobjects</artifactId>
         <version>2.0.0-SNAPSHOT</version>
-        <relativePath>../../core/pom.xml</relativePath>
     </parent>
 
-    <groupId>org.apache.isis.viewer</groupId>
-	<artifactId>isis-viewer-restfulobjects</artifactId>
-	<name>Apache Isis Viewer - RO</name>
+	<artifactId>isis-viewer-restfulobjects-client</artifactId>
+	<name>Apache Isis Viewer - RO (Client)</name>
 
-    <packaging>pom</packaging>
+    <properties>
+        <jar-plugin.automaticModuleName>org.apache.isis.viewer.restfulobjects.client</jar-plugin.automaticModuleName>
+        <git-plugin.propertiesDir>org/apache/isis/viewer/restfulobjects/client</git-plugin.propertiesDir>
+    </properties>
 
-    <modules>
-        <module>applib</module>
-        <module>client</module>
-        <module>rendering</module>
-        <module>viewer</module>
-        <module>testing</module>
-        <module>jaxrs-resteasy-4</module>
-    </modules>
+    <dependencies>
+
+		<dependency>
+			<groupId>org.apache.isis.viewer</groupId>
+			<artifactId>isis-viewer-restfulobjects-applib</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<scope>compile</scope>
+		</dependency>
+
+        <!-- TEST DEPENDENCIES -->
+
+        <dependency>
+            <groupId>org.apache.isis.core</groupId>
+            <artifactId>isis-core-internaltestsupport</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 
 </project>
