--- a/extensions/core/command-replay/pom.xml
+++ b/extensions/core/command-replay/pom.xml
@@ -46,11 +46,9 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.apache.isis.mappings</groupId>
-				<artifactId>isis-mappings</artifactId>
-				<version>2.0.0-SNAPSHOT</version>
-				<scope>import</scope>
-				<type>pom</type>
+		    	<groupId>org.apache.isis.viewer</groupId>
+            	<artifactId>isis-viewer-restfulobjects-client</artifactId>
+        		<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
