--- a/extensions/core/command-replay/secondary/pom.xml
+++ b/extensions/core/command-replay/secondary/pom.xml
@@ -56,13 +56,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.isis.mappings</groupId>
-            <artifactId>isis-mappings-jaxrsclient-applib</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.isis.mappings</groupId>
-            <artifactId>isis-mappings-jaxrsclient-impl</artifactId>
+            <groupId>org.apache.isis.viewer</groupId>
+            <artifactId>isis-viewer-restfulobjects-client</artifactId>
         </dependency>
 
         <dependency>
