--- a/extensions/core/command-replay/secondary/pom.xml
+++ b/extensions/core/command-replay/secondary/pom.xml
@@ -78,11 +78,13 @@
             <scope>test</scope>
         </dependency>
         
+        <!-- TOOO convergence issues, disable for now 
         <dependency>
 			<groupId>org.glassfish.jersey.ext</groupId>
 			<artifactId>jersey-spring5</artifactId>
 			<scope>test</scope>
 		</dependency>
+		-->
 
     </dependencies>
 
