--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -75,7 +75,7 @@ under the License.
 	<name>Apache Isis</name>
 	<description>
 		Apache Isis Bill of Material (BOM).
-		Als the parent POM for the core framework + extensions, starter parent pom for starter apps.
+		Also the parent POM for the core framework, extensions and starter apps.
 	</description>
 
     <url>https://isis.apache.org</url>
@@ -331,9 +331,6 @@ under the License.
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<maven.compiler.release>11</maven.compiler.release>
-
-		<!-- overriding Spring, since v3.0.0 breaks artifact retrieval of org.jruby:jruby (of any version) -->
-		<maven-enforcer-plugin.version>3.0.0</maven-enforcer-plugin.version>
 
 		<lombok.version>1.18.22</lombok.version> <!-- overriding Spring -->
 		<delombok.output>${project.build.directory}/delombok</delombok.output>
