--- a/valuetypes/prism/vaadin/pom.xml
+++ b/valuetypes/prism/vaadin/pom.xml
@@ -26,6 +26,7 @@
 	<properties>
 		<jar-plugin.automaticModuleName>org.apache.isis.valuetypes.prism.vaadin</jar-plugin.automaticModuleName>
 		<git-plugin.propertiesDir>org/apache/isis/valuetypes/prism/vaadin</git-plugin.propertiesDir>
+		<enforcer.skip>true</enforcer.skip>
 	</properties>
 	
 	<dependencies>
