--- a/core/pom.xml
+++ b/core/pom.xml
@@ -81,7 +81,7 @@
         <log4j.version>1.2.17</log4j.version>
 
         <joda-time.version>2.9.4</joda-time.version>
-        <guava.version>19.0</guava.version>
+        <guava.version>30.1-jre</guava.version>
 
         <hamcrest.version>1.3</hamcrest.version>
         <assertj.version>3.6.2</assertj.version>
@@ -100,7 +100,6 @@
 
         <axon-core.version>2.4.4</axon-core.version>
 
-        <jackson.version>2.9.8</jackson.version>
         <gson.version>2.9.0</gson.version>
         <swagger-core.version>1.5.9</swagger-core.version>
 
@@ -329,6 +328,14 @@
 	            <type>pom</type>
 	            <version>${project.version}</version>
 	        </dependency>
+	        
+	        <dependency>
+				<groupId>com.fasterxml.jackson</groupId>
+				<artifactId>jackson-bom</artifactId>
+				<version>2.13.2.1</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
         
             <!-- unittestsupport -->
             <dependency>
@@ -681,28 +688,6 @@
                 <version>${xstream.version}</version>
             </dependency>
 
-
-            <!-- JSON libraries -->
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-core</artifactId>
-                <version>${jackson.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-annotations</artifactId>
-                <version>${jackson.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.module</groupId>
-                <artifactId>jackson-module-jaxb-annotations</artifactId>
-                <version>${jackson.version}</version>
-            </dependency>
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
@@ -1285,6 +1270,15 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.24</version>
 		</dependency>
+	    
+	    <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-jaxb-annotations</artifactId>
+        </dependency>
 	    
         <dependency>
             <groupId>com.google.guava</groupId>
