--- a/core/pom.xml
+++ b/core/pom.xml
@@ -66,13 +66,13 @@
         <projectUrl>${project.url}</projectUrl>
 
         <!-- Isis Datanucleus JDO dn -->
-     	<datanucleus-api-jdo.version>6.0.0-m5</datanucleus-api-jdo.version>
+		<datanucleus-api-jdo.version>6.0.0-m5</datanucleus-api-jdo.version>
 		<datanucleus-api-jpa.version>6.0.0-m5</datanucleus-api-jpa.version>
 		<datanucleus-core.version>6.0.0-m5</datanucleus-core.version>
 		<datanucleus-jdo-api.version>3.2.1</datanucleus-jdo-api.version>
 		<datanucleus-jdo-query.version>6.0.0-m1</datanucleus-jdo-query.version>
 		<datanucleus-jodatime.version>6.0.0-m5</datanucleus-jodatime.version>
-		<datanucleus-maven-plugin.version>6.0.0-m1</datanucleus-maven-plugin.version>
+		<datanucleus-maven-plugin.version>6.0.0-release</datanucleus-maven-plugin.version>
 		<datanucleus-rdbms.version>6.0.0-m5</datanucleus-rdbms.version>
 
         <shiro.version>1.2.6</shiro.version>
