--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -230,6 +230,12 @@
 
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
+				<artifactId>isis-extensions-sessionlog-impl</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.isis.extensions</groupId>
 				<artifactId>isis-extensions-cors-impl</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
@@ -265,6 +271,7 @@
 		<module>security/secman</module>
 		<module>security/shiro-realm-ldap</module>
 		<module>security/spring-oauth2</module>
+		<module>security/sessionlog</module>
 
 		<module>vro/cors</module>
 
