--- a/valuetypes/asciidoc/ui/pom.xml
+++ b/valuetypes/asciidoc/ui/pom.xml
@@ -112,6 +112,11 @@
 			<artifactId>jnr-constants</artifactId>
 			<version>0.10.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.jnr</groupId>
+			<artifactId>jnr-ffi</artifactId>
+			<version>2.2.12</version>
+		</dependency>
 		<!-- END OF ASCII-DOC -->
 		
 		<!-- PRISM (SYNTAX HIGHLIGHTING) -->
