--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -154,7 +154,7 @@
 
 				<!-- keep in sync with versions used in Apache Isis -->
 				<datanucleus-api-jdo.version>6.0.0-release</datanucleus-api-jdo.version>
-				<datanucleus-api-jpa.version>6.0.0-m5</datanucleus-api-jpa.version>
+				<datanucleus-api-jpa.version>6.0.0-release</datanucleus-api-jpa.version>
 				<datanucleus-core.version>6.0.0-release</datanucleus-core.version>
 				<datanucleus-jodatime.version>6.0.0-release</datanucleus-jodatime.version>
 				<datanucleus-maven-plugin.version>6.0.0-release</datanucleus-maven-plugin.version>
