--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,8 @@
 			</modules>
 		</profile>
 
+		<!-- ALL MODULES - TROUBLE SHOOTING -->
+
 		<profile>
 			<id>module-all-except-incubator</id>
 			<activation>
@@ -120,6 +122,29 @@
 			<modules>
 				<module>antora</module>
 				<module>examples/demo</module>
+				<module>regressiontests</module>
+				<module>tooling</module>
+			</modules>
+		</profile>
+		
+		<profile>
+			<id>module-all-except-kroviz</id>
+			<activation>
+				<property>
+					<name>module-all-except-kroviz</name>
+				</property>
+			</activation>
+			<modules>
+				<module>antora</module>
+				<module>examples/demo</module>
+				
+				<!-- incubator, without kroviz -->
+				<module>incubator/viewers/graphql</module>
+				<module>incubator/viewers/javafx</module>
+				<module>incubator/viewers/vaadin</module>
+				<module>valuetypes/prism/vaadin</module>
+				<module>valuetypes/asciidoc/ui/vaadin</module>
+				
 				<module>regressiontests</module>
 				<module>tooling</module>
 			</modules>
