--- a/antora/playbooks/site.yml
+++ b/antora/playbooks/site.yml
@@ -161,6 +161,10 @@ content:
     - url: .
       start_path: extensions/vw/pdfjs/adoc # vw
       branches: HEAD
+      
+    - url: .
+      start_path: extensions/sse/adoc # extensions
+      branches: HEAD
 
 # incubator
     - url: .
@@ -264,9 +268,6 @@ content:
       branches: HEAD
     - url: .
       start_path: valuetypes/markdown/adoc # valuetypes
-      branches: HEAD
-    - url: .
-      start_path: valuetypes/sse/adoc # valuetypes
       branches: HEAD
 
 # viewers
