--- a/extensions/vw/sse/pom.xml
+++ b/extensions/vw/sse/pom.xml
@@ -18,6 +18,7 @@
 		<groupId>org.apache.isis.extensions</groupId>
 		<artifactId>isis-extensions</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>isis-extensions-sse</artifactId>
