--- a/core/pom.xml
+++ b/core/pom.xml
@@ -574,6 +574,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.isis.persistence</groupId>
+				<artifactId>isis-persistence-commons</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.persistence</groupId>
 				<artifactId>isis-persistence-jdo-applib</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
@@ -1628,6 +1633,7 @@
 		<module>../viewers/restfulobjects</module>
 		<module>../viewers/wicket</module>
 
+		<module>../persistence/commons</module>
 		<module>../persistence/jdo</module>
 		<module>../persistence/jpa</module>
 
