--- a/persistence/commons/pom.xml
+++ b/persistence/commons/pom.xml
@@ -14,21 +14,23 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.apache.isis.persistence</groupId>
-		<artifactId>isis-persistence-jdo</artifactId>
+		<groupId>org.apache.isis.core</groupId>
+		<artifactId>isis-core</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
+		<relativePath>../../core/pom.xml</relativePath>
 	</parent>
 
-	<artifactId>isis-persistence-jdo-integration</artifactId>
+	<groupId>org.apache.isis.persistence</groupId>
+	<artifactId>isis-persistence-commons</artifactId>
 
-	<name>Apache Isis Persistence - JDO (integration)</name>
+	<name>Apache Isis Persistence - Commons</name>
 	<description>
-        JDO Integration (powered by DataNucleus)
+		Apache Isis Common utilities for persistence stacks
     </description>
 
 	<properties>
-		<jar-plugin.automaticModuleName>org.apache.isis.persistence.jdo.integration</jar-plugin.automaticModuleName>
-		<git-plugin.propertiesDir>org/apache/isis/persistence/jdo/integration</git-plugin.propertiesDir>
+		<jar-plugin.automaticModuleName>org.apache.isis.persistence.commons</jar-plugin.automaticModuleName>
+		<git-plugin.propertiesDir>org/apache/isis/persistence/commons</git-plugin.propertiesDir>
 	</properties>
 
 	<dependencies>
@@ -46,26 +48,6 @@
 		<dependency>
 			<groupId>org.apache.isis.core</groupId>
 			<artifactId>isis-core-runtime</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.isis.persistence</groupId>
-			<artifactId>isis-persistence-commons</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.isis.persistence</groupId>
-			<artifactId>isis-persistence-jdo-applib</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.isis.persistence</groupId>
-			<artifactId>isis-persistence-jdo-metamodel</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.isis.persistence</groupId>
-			<artifactId>isis-persistence-jdo-spring</artifactId>
 		</dependency>
 
 		<!-- TESTING -->
