--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -431,6 +431,12 @@
 				<artifactId>isis-extensions-cors-impl</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
+			
+			<dependency>
+				<groupId>org.apache.isis.extensions</groupId>
+				<artifactId>isis-extensions-spring-security-oauth2</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
