--- a/.github/workflows/ci-build-artifacts-no-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-no-push-maven.yml
@@ -47,6 +47,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Set up JDK 18
+      if: matrix.language == 'java'
       uses: actions/setup-java@v3
       with:
         distribution: 'zulu'
@@ -55,9 +56,11 @@ jobs:
         java-version: 18
 
     - name: Print Maven Version
+      if: matrix.language == 'java'
       run: mvn --version
 
     - name: Activate Cache for Maven Downloads
+      if: matrix.language == 'java'
       uses: actions/cache@v3
       env:
         # change the cache-name if we want to rebuild the cache
@@ -71,6 +74,7 @@ jobs:
           ${{ runner.os }}-
 
     - name: Setup Script Environment
+      if: matrix.language == 'java'
       shell: bash
       run: |
         echo ==============  ENV  =================
@@ -80,8 +84,16 @@ jobs:
         echo CI_SCRIPTS_PATH  \: $CI_SCRIPTS_PATH
         echo MVN_STAGES       \: $MVN_STAGES
         echo ======================================
+        
+    # CodeQL Analysis (https://codeql.github.com/docs/codeql-overview/about-codeql/)
+    - name: "CodeQL: Initialize"
+      if: env.SKIP_CODE_QL != 'true' 
+      uses: github/codeql-action/init@v2
+      with:
+        languages: ${{ matrix.language }}
 
     - name: Build Artifacts
+      if: matrix.language == 'java'
       shell: bash
       run: bash $CI_SCRIPTS_PATH/build-artifacts.sh
       env:
@@ -97,19 +109,19 @@ jobs:
           -Dmaven.source.skip=true
           -Denforcer.failFast=true
           -e
-
-    # CodeQL Analysis (https://codeql.github.com/docs/codeql-overview/about-codeql/)
-    - name: Initialize CodeQL
-      if: env.SKIP_CODE_QL != 'true' 
-      uses: github/codeql-action/init@v2
-      with:
-        languages: ${{ matrix.language }}
-    - name: Perform CodeQL Analysis
+          
+    # Autobuild attempts to build any compiled languages  (C/C++, C#, Go, or Java).
+    # If this step fails, then you should remove it and run the build manually
+    - name: "CodeQL: Autobuild" 
+      if: env.SKIP_CODE_QL != 'true' && matrix.language == 'javascript'
+      uses: github/codeql-action/autobuild@v2
+          
+    - name: "CodeQL: Perform Analysis"
       if: env.SKIP_CODE_QL != 'true'
       uses: github/codeql-action/analyze@v2
       with:
         category: "/language:${{matrix.language}}"
-           
+               
 
 # FOR DEBUG USE
 #   - name: Dump GitHub context
