--- a/examples/demo/domain/src/main/resources/application.yml
+++ b/examples/demo/domain/src/main/resources/application.yml
@@ -22,8 +22,8 @@ causeway:
   applib:
     annotation:
       action:
-        command: ignore_safe
-        publishing: none
+        execution-publishing: none
+        command-publishing: none
       action-layout:
         css-class-fa:
           patterns:
@@ -42,10 +42,11 @@ causeway:
             delete.*:btn-danger
       domain-object:
         editing: false
-        publishing: none
+        entity-change-publishing: none
       property:
         command: all
-        publishing: none
+        command-publishing: none
+        execution-publishing: none
       property-layout:
         label-position: LEFT
       parameter-layout:
