--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -191,7 +191,9 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 
 		<!--  9.4.0 is last known good, before wicket put jupiter-api on the module graph -->
 		<!--  <wicket.version>936167650a</wicket.version> 28 Nov '22 build -->
-        <wicket.version>spring6-4e058bde3a-1</wicket.version>
+        <!--  <wicket.version>spring6-4e058bde3a-1</wicket.version> 5 Mar '23 build -->
+        <wicket.version>c61acb79a9</wicket.version> <!-- 4 Apr '23 build -->
+        
         
         
         <wicket-bootstrap.version>6.0.2</wicket-bootstrap.version> <!-- de.agilecoders.wicket:wicket-bootstrap... -->
