--- a/examples/demo/testing/pom.xml
+++ b/examples/demo/testing/pom.xml
@@ -97,6 +97,14 @@
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
 		
+		<!-- APPROVAL TESTING -->
+		
+		<dependency>
+			<groupId>com.approvaltests</groupId>
+			<artifactId>approvaltests</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 	
 	<modules>
